vlib/v/checker/tests/chan_ref.out
vlib/v/checker/tests/chan_ref.vv:10:8: error: cannot push non-reference `St` on `chan &St`
    8 | fn f(ch chan &St, mut sem sync.Semaphore) {
    9 |     w := St{}
   10 |     ch <- w
      |           ^
   11 |     mut x := St{}
   12 |     ch <- x
vlib/v/checker/tests/chan_ref.vv:12:8: error: cannot push non-reference `St` on `chan &St`
   10 |     ch <- w
   11 |     mut x := St{}
   12 |     ch <- x
      |           ^
   13 |     // the following works
   14 |     y := &St{}
